// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`async-do-expressions.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
async do {
  1;
};

(async do {});

let x = async do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

async do {
  await 42
}

let x = async do {
  let tmp = f();
  tmp * tmp + 1
};

=====================================output=====================================
(async do {
  1;
});

(async do {});

let x = async do {
  if (foo()) {
    f();
  } else if (bar()) {
    g();
  } else {
    h();
  }
};

(async do {
  await 42;
});

let x = async do {
  let tmp = f();
  tmp * tmp + 1;
};

================================================================================
`;

exports[`async-do-expressions.js format[acorn] 1`] = `
"Unexpected token (1:7)
> 1 | async do {
    |       ^
  2 |   1;
  3 | };
  4 |
Cause: Unexpected token (1:6)"
`;

exports[`async-do-expressions.js format[espree] 1`] = `
"Unexpected token do (1:7)
> 1 | async do {
    |       ^
  2 |   1;
  3 | };
  4 |
Cause: Unexpected token do"
`;

exports[`async-do-expressions.js format[meriyah] 1`] = `
"Unexpected token: 'do' (1:7)
> 1 | async do {
    |       ^^
  2 |   1;
  3 | };
  4 |
Cause: [1:6-1:8]: Unexpected token: 'do'"
`;

exports[`async-do-expressions.js format[oxc] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found none (1:6)
> 1 | async do {
    |      ^
  2 |   1;
  3 | };
  4 |"
`;

exports[`async-do-expressions.js format[yuku] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found 'do' (1:7)
> 1 | async do {
    |       ^^
  2 |   1;
  3 | };
  4 |"
`;
